# TableMage

./: .gitignore  LICENSE  README.md  pyproject.toml
.dev_notes/: package_dependencies.md
.dev_utils/: clean_package_directory.py
.github/workflows/: test.yml
demo/: run_ui.py
demo/simulated_tka_data/: simulate_tka_data.py  simulated_tka_data.csv  supp_table_4.md
docs/: demo.ipynb
tablemage/: __init__.py
tablemage/_base/: __init__.py
tablemage/_reports/: __init__.py
tablemage/_src/: analyzer.py
tablemage/_src/causal/: causal_model.py
tablemage/_src/causal/causalutils/: methods.py
tablemage/_src/data/: dataemitter.py  datahandler.py
tablemage/_src/exploratory/: __init__.py  eda.py
tablemage/_src/feature_selection/: __init__.py
tablemage/_src/linear/: __init__.py
tablemage/_src/linear/reports/: __init__.py
tablemage/_src/ml/predict/classification/: __init__.py  mlclass_report.py
tablemage/_src/ml/predict/regression/: __init__.py  mlreg_report.py
tablemage/_src/stattests/: __init__.py
tablemage/_src/utils/: __init__.py
tablemage/agents/_src/: __init__.py
tablemage/agents/_src/_debug/: logger.py
tablemage/agents/_src/agents_src/: single_agent.py
tablemage/agents/_src/agents_src/prompt/: single_agent_system_prompt.py
tablemage/agents/_src/io/: datacontainer.py  storage_manager.py
tablemage/agents/_src/llms/: utils.py
tablemage/agents/_src/llms/openai/: openai.py
tablemage/agents/_src/tools/: causal_tools.py  eda_tools.py  experimental_tools.py  io_tools.py  linear_regression_tools.py  ml_tools.py  tooling_context.py  transform_tools.py
tablemage/agents/api/: chatda.py
tablemage/agents/ui/: app.py
tablemage/agents/ui/templates/: index.html
tablemage/ml/: __init__.py
tests/basic/analyzer/: test_true_false_handling.py
tests/basic/causal/: test_woolridge_card.py
tests/basic/linear/: test_example.py
tests/basic/ml/: test_finish_run.py  test_finish_run_feature_selectors.py  test_sklearn_pipeline.py
tests/systematic/linear/: test_logistic_comprehensive.py  test_ols_comprehensive.py
tests/systematic/pipelineing_and_transformations/: test_sklearn_modeling_comparison_with_transformations.py  test_target_scaling_with_models.py  test_transformations.py
