[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "tablemage"
version = "0.1.0-alpha.1"
description = "Python package for low-code/conversational clinical data science"
authors = [
    {name = "Andrew Yang", email = "andrew_j_yang@brown.edu"},
    {name = "Joshua Woo", email = "joshua_woo@brown.edu"},
    {name = "Ryan Zhang", email = "rzryanz00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.3",
    "scipy==1.16.1",
    "scikit-learn==1.7.1",
    "matplotlib==3.10.5",
    "seaborn==0.13.2",
    "xgboost==3.0.4",
    "statsmodels==0.14.5",
    "adjustText==1.3.0",
    "tableone==0.9.5",
    "umap-learn==0.5.9.post2",
    "optuna==4.5.0",
    "optuna-integration==4.5.0",
]
license = {file = "LICENSE"}
keywords = ["data science", "low-code", "no-code", "statistics", "machine learning"]
classifiers = [
    "Programming Language :: Python"
]


[project.optional-dependencies]
agents = [
    "llama-index==0.13.3",
    "llama-index-llms-groq==0.4.0",
    "llama-index-llms-ollama==0.5.3",
    "llama-index-llms-openai==0.5.4",
    "Flask==3.1.2",
    "Flask-Cors==6.0.1",
    "python-dotenv==1.1.1",
    "llama-index-embeddings-fastembed==0.4.0",
    "fastembed==0.7.1",
]


[project.urls]
Homepage = "https://tablemage.readthedocs.io/"


[tool.hatch.metadata]
packages = [
    {include = "tablemage"}
]
