[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "tablemage"
version = "0.1.0"
description = "Python package for low-code/conversational clinical data science"
authors = [
    {name = "Andrew Yang", email = "andrew_j_yang@brown.edu"},
    {name = "Joshua Woo", email = "joshua_woo@brown.edu"},
    {name = "Ryan Zhang", email = "rzryanz00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "numpy==2.3.5",
    "pandas==2.3.3",
    "scipy==1.17.0",
    "scikit-learn==1.8.0",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "xgboost==3.1.3",
    "statsmodels==0.14.6",
    "adjustText==1.3.0",
    "tableone==0.9.5",
    "umap-learn==0.5.11",
    "optuna==4.7.0",
    "optuna-integration==4.7.0",
    "ipykernel==7.1.0",
    "ipywidgets==8.1.8"
]
license = {file = "LICENSE"}
keywords = ["data science", "low-code", "no-code", "statistics", "machine learning"]
classifiers = [
    "Programming Language :: Python"
]


[project.optional-dependencies]
agents = [
    "llama-index==0.14.13",
    "llama-index-llms-groq==0.4.1",
    "llama-index-llms-ollama==0.9.1",
    "llama-index-llms-openai==0.6.13",
    "llama-index-multi-modal-llms-openai==0.6.2",
    "Flask==3.1.2",
    "Flask-Cors==6.0.2",
    "python-dotenv==1.2.1",
    "fastembed==0.7.4",
    "llama-index-embeddings-fastembed==0.5.0",
    "nest-asyncio==1.6.0"
]


[project.urls]
Homepage = "https://tablemage.readthedocs.io/"


[tool.hatch.metadata]
packages = [
    {include = "tablemage"}
]